--- a/src/components/ImageList.css
+++ b/src/components/ImageList.css
@@ -1,11 +1,11 @@
 .image-list {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-	gap: 0 10px;
+	text-align: center;
 	grid-auto-rows: 10px;
+	gap: 0px 5px;
 }
 
 .image-list img {
 	width: 250px;
-	grid-row-end: span 2;
 }
